--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d docs"
   },
   "devDependencies": {
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "gh-pages": "^6.3.0"
   }
 }
