--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "deploy": "gh-pages -d docs"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "vite": "^6.2.2",
