Add gh pages commands Adds the option to publish to github pages from a button
Attempts to support static vs only generated static sites (without build processes)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -83,7 +83,7 @@
             {
               "name": "🚀 Publish",
               "singleInstance": true,
-              "command": "npm run deploy",
+              "command": "bash _helpers/publish.sh",
               "tooltip": "Publish to GitHub Pages"
             }
           ],
